Fix alignment on mobile

--- a/components/Links/Links.scss
+++ b/components/Links/Links.scss
@@ -32,3 +32,11 @@
     top: 0;
   }
 }
+
+.Links__right {
+  @include desktop {
+    p {
+      text-align: right;
+    }
+  }
+}
